<resources>
    <string name="app_name">Breakout Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_scores">High Scores</string>
    <string name="listScoreHeading">High Scores</string>
    <string name="lblUserName">User</string>
    <string name="lblScore">Score</string>
    <string name="lblGetUserName">Congrats! You\'re one among the high scorers now. Please enter your name to proceed.</string>
    <string name="lblUserNameField">Enter Username: </string>
    <string name="lblSave">Save</string>
    <string name="title_activity_get_user_name">GetUserName</string>
    <string name="hintUsername">Username</string>
</resources>
