<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.karthi.breakoutgame.ListScores" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listScoreHeading"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/rank"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Rank"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblUserName"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lblScore"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    />

            </LinearLayout>

            <ListView
                android:id="@+id/highScoreListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
